[gd_scene load_steps=6 format=3 uid="uid://b4sh1l1hct3a6"]

[ext_resource type="Script" uid="uid://ckswnich5xj8m" path="res://Scripts/Menus/difficulty_selection.gd" id="1_af40x"]
[ext_resource type="Texture2D" uid="uid://vxq8pl1b1icm" path="res://Art/VisualArt/UI/Menus/Mapselection/mapselectionbg.png" id="2_wbiky"]
[ext_resource type="Texture2D" uid="uid://c7cfttdrthhge" path="res://Art/VisualArt/UI/Buttons/backtomain/backtomenu.png" id="3_ye54x"]
[ext_resource type="Texture2D" uid="uid://cj6dogjkm3yb4" path="res://Art/VisualArt/UI/Buttons/backtomain/backpressed.png" id="4_ps14r"]
[ext_resource type="Texture2D" uid="uid://dkftg8tco5g34" path="res://Art/VisualArt/UI/Buttons/backtomain/backhover.png" id="5_rcnj2"]

[node name="DifficultySelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_af40x")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.243137)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wbiky")
expand_mode = 1

[node name="MapNameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 150.0
offset_right = 20.0
offset_bottom = 173.0
grow_horizontal = 2

[node name="MapImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -125.0
offset_right = 200.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -178.0
offset_right = 85.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 0

[node name="EasyButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Easy"

[node name="MediumButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Medium"

[node name="HardButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Hard"

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 125.0
offset_bottom = 124.0
size_flags_vertical = 8
texture_normal = ExtResource("3_ye54x")
texture_pressed = ExtResource("4_ps14r")
texture_hover = ExtResource("5_rcnj2")

[connection signal="pressed" from="BackButton" to="." method="_on_button_pressed"]
